<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="7dp"
    tools:context=".activity.DetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/colorWhite"
            app:cardElevation="3dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvCustName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:drawableLeft="@drawable/ic_user"
                    android:drawablePadding="10dp"
                    android:gravity="center_vertical"
                    android:text="Anmol Shirke"
                    android:textColor="@color/colorBlack"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvCustMobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:drawableLeft="@drawable/ic_mobile"
                    android:drawablePadding="10dp"
                    android:gravity="center_vertical"
                    android:text="9881168357" />

                <TextView
                    android:id="@+id/tvCustEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:drawableLeft="@drawable/ic_email"
                    android:drawablePadding="10dp"
                    android:gravity="center_vertical"
                    android:text="anmol@gmail.com" />

                <TextView
                    android:id="@+id/tvCustAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:drawableLeft="@drawable/ic_address"
                    android:drawablePadding="10dp"
                    android:gravity="center_vertical"
                    android:text="Nashik" />

            </LinearLayout>
        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/colorWhite"
            app:cardElevation="3dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvWorkType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="Renewal of License"
                    android:textColor="@color/colorBlack"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="12/11/2018" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/colorWhite"
            app:cardElevation="3dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#ededed"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/colorLightYellow"
                            android:gravity="center"
                            android:lines="2"
                            android:maxLines="2"
                            android:padding="5dp"
                            android:text="Actual Cost"
                            android:textColor="@color/colorBlack"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tvActualCost"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/colorWhite"
                            android:gravity="center"
                            android:maxLines="1"
                            android:padding="5dp"
                            android:singleLine="true"
                            android:textColor="@color/colorBlack" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/colorLightYellow"
                            android:gravity="center"
                            android:lines="2"
                            android:maxLines="2"
                            android:padding="5dp"
                            android:text="Amount Paid"
                            android:textColor="@color/colorBlack"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tvAmtPaid"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/colorWhite"
                            android:gravity="center"
                            android:maxLines="1"
                            android:padding="5dp"
                            android:singleLine="true"
                            android:textColor="@color/colorBlack" />


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/colorLightYellow"
                            android:gravity="center"
                            android:maxLines="2"
                            android:padding="5dp"
                            android:text="Amount Remaining"
                            android:textColor="@color/colorBlack"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tvAmtRemaining"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/colorWhite"
                            android:gravity="center"
                            android:maxLines="1"
                            android:padding="5dp"
                            android:singleLine="true"
                            android:textColor="@color/colorBlack" />
                    </LinearLayout>
                </LinearLayout>

                <TextView
                    android:id="@+id/tvStatus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:drawableLeft="@drawable/ic_status"
                    android:drawablePadding="10dp"
                    android:gravity="center_vertical"
                    android:padding="5dp"
                    android:textColor="@color/colorRed"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:padding="5dp"
                    android:text="Attachments"
                    android:textColor="@color/colorBlack"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.7dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:background="@color/colorBlack" />

                <com.ats.rtoemployeeapp.util.FlowLayout
                    android:id="@+id/flowLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/tvPhoto1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:padding="5dp"
                        android:text="@string/photo_1"
                        android:textColor="@color/colorBlue"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/tvPhoto2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:padding="5dp"
                        android:text="@string/photo_2"
                        android:textColor="@color/colorBlue"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/tvAadhar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:padding="5dp"
                        android:text="@string/aadhar_card"
                        android:textColor="@color/colorBlue"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/tvRC"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:padding="5dp"
                        android:text="@string/rc_book"
                        android:textColor="@color/colorBlue"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/tvInsc1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:padding="5dp"
                        android:text="@string/insurance_1"
                        android:textColor="@color/colorBlue"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/tvInsc2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:padding="5dp"
                        android:text="@string/insurance_2"
                        android:textColor="@color/colorBlue"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/tvPUC"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:padding="5dp"
                        android:text="@string/puc"
                        android:textColor="@color/colorBlue"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/tvBankLetter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:padding="5dp"
                        android:text="@string/bank_letter"
                        android:textColor="@color/colorBlue"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/tvForm17"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:padding="5dp"
                        android:text="@string/form_17"
                        android:textColor="@color/colorBlue"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/tvBankNOC"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:padding="5dp"
                        android:text="@string/bank_noc"
                        android:textColor="@color/colorBlue"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/tvAddProof"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:padding="5dp"
                        android:text="@string/address_proof"
                        android:textColor="@color/colorBlue"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/tvOrigLic"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:padding="5dp"
                        android:text="@string/original_license"
                        android:textColor="@color/colorBlue"
                        android:visibility="gone" />


                </com.ats.rtoemployeeapp.util.FlowLayout>

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <Button
            android:id="@+id/btnCollect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/colorPrimary"
            android:text="Collect Docs"
            android:textColor="@color/colorBlack" />


    </LinearLayout>
</ScrollView>